@@ -48,11 +48,13 @@ Axis X = "Area"
 Axis Y = "Defo"
 Scatter Marker Size = 2
 Scatter Title Colored = True
+Scatter Plot Excluded Events = True
 # Limit number of points drawn in a scatter plot
 # Active or inactive
 Downsampling = True
 # Set maximum number. If <1, only grid-downsampling is performed
 Downsample Events = 2000
+
 
 # Contour resolution
 Contour Fix Scale = False
