@@ -4,6 +4,7 @@
 - dclab (0.1.6.dev2): Allow to disable KDE computation
 - Allow to change order of plots (#51)
 - Implement indexing of events (#49)
+- Allow to show excluded events in scatter plot (#52)
 - Bugfixes:
   - Settings panel not redrawn in Ubuntu (#66)
   - Order of plots not reproduced from session (#51)
